# hide-chat

./: pyproject.toml
src/hide_chat/: __init__.py  loop.py  streamlit.py
src/hide_chat/tools/: bash.py  collection.py  edit.py
