[project]
name = "hide-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "hide-mcp",
    "mcp>=1.1.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.40.2",
]

[project.scripts]
hide-chat = "hide_chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
hide-mcp = { path = "../hide-mcp", editable = true }
